@@ -84,6 +84,8 @@
 		<maven.compiler.source>1.5</maven.compiler.source>
 		<maven.compiler.target>1.5</maven.compiler.target>
 		<encoding>UTF-8</encoding>
+		<test.vmargs>${test.osvmargs}</test.vmargs>
+		<test.osvmargs></test.osvmargs>
 	</properties>
 
 	<modules>
@@ -430,7 +432,31 @@
 				<signing.key.password>${env.bamboo_signing_key_password}</signing.key.password>
 			</properties>
 		</profile>
-
+		
+ 		<profile>
+			<id>mac</id>
+			<activation>
+				<os>
+			        <family>mac</family>
+			    </os>
+      		</activation>
+			<properties>
+				<test.osvmargs>-XstartOnFirstThread</test.osvmargs>
+			</properties>
+		</profile>
+		
+		<profile>
+			<id>windows</id>
+			<activation>
+				<os>
+			        <family>Windows</family>
+			    </os>
+      		</activation>
+			<properties>
+				<test.osvmargs>-Dgreclipse.nonlocking=true</test.osvmargs>
+			</properties>
+		</profile>
+		
 	</profiles>
 
 	<repositories>
@@ -675,6 +701,19 @@
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-antrun-plugin</artifactId>
 					<version>1.3</version>
+				</plugin>
+ 				<plugin>
+					<groupId>org.eclipse.tycho</groupId>
+					<artifactId>tycho-surefire-plugin</artifactId>
+					<version>${tycho-version}</version>
+					<configuration>
+						<argLine>
+							-Xmx1024m -XX:MaxPermSize=256m ${test.vmargs}
+						</argLine>
+					<testFailureIgnore>
+						true
+					</testFailureIgnore>
+					</configuration>
 				</plugin>
 			</plugins>
 		</pluginManagement>
